--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Welcome to your first GitHub Pages website!</p>
-
+<p>New line for GitHub</p>
+<p>Second line for commit</p>
 </body>
 </html>
